[project]
name = "dorker"
version = "1.0.0"
description = "Multi-engine search dork aggregator with anti-detection"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "beautifulsoup4>=4.15.0",
    "ddgs>=9.14.4",
    "googlesearch-python>=1.3.0",
    "lxml>=6.1.1",
    "requests>=2.34.2",
]

[project.scripts]
dorker = "dorker.cli:main"
