[project]
name = "dorker"
version = "1.0.0"
description = "Multi-engine search dork aggregator with anti-detection"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ddgs>=9.14.4",
    "httpx[socks]>=0.28.1",
    "lxml>=6.1.1",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40.0"]

[project.scripts]
dorker = "dorker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
